# OpenGL-Object-Rendering

./: .gitignore  BUILD.sh  CMakeLists.txt  README.md
cmake/: source.txt  source2.txt
shaders/cube/: fragment_shader.glsl  vertex_shader.glsl
shaders/donut/: vertex_shader.glsl
shaders/sphere/: vertex_shader.glsl
src/: bounce.c  cube.cpp  donut.cpp  glut.cpp  sphere.cpp  triangle.cpp
src/common/: compile_shaders.h  init_opengl.h  read_file.h
